[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-osint-query"
version = "0.1.0"
description = "Omni OSINT Query Service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "omni-python-library @ git+https://github.com/omnsight/omni-python-library",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.11.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
